--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
-0.02 20xx-xx-xx
-	- Fixed missing items in MANIFEST
+0.03 2011-06-10
+	- Documenation tidy-up.
+
+0.02 2011-06-09
+	- Fixed missing items in MANIFEST.
 
 0.01 2011-06-09
 	- First public release.
